<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="Home"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/camera_icon"
            android:title="@string/open_camera" />

        <item
            android:id="@+id/nav_shots"
            android:icon="@drawable/shots_icon"
            android:title="@string/shots" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/about" />
    </group>

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/nav_open_site"
                android:icon="@drawable/visit_site_icon"
                android:title="@string/visit_site" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/share"></item>
        </menu>
    </item>

</menu>