<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Authentication.LoginPage">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ProgressBar
                android:id="@+id/signup_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="66dp"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/signup_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signup-title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/bukhari"
            android:gravity="center"
            android:includeFontPadding="true"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/join_us_signup"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:fontFamily="@font/bukhari"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/margin_default"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="470dp">

            <LinearLayout
                android:id="@+id/signup_linearlayout1"
                android:layout_width="match_parent"
                android:layout_height="369dp"
                android:adjustViewBounds="true"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="56dp"
                android:paddingRight="24dp"
                android:scaleType="fitCenter">


                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/signup_email"
                    android:inputType="textEmailAddress"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/signup_username"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/signup_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/signup_first_name"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/signup_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/signup_last_name"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/login_pass"
                    android:inputType="textPassword"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/signup_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/signup_confirm_password"
                    android:inputType="textPassword"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />


                <!-- Login -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/bukhari"
                    android:gravity="center"
                    android:text="@string/login_login"
                    android:textColor="@color/redBold"
                    android:textSize="15sp"></TextView>
            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/sign_up"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_default"
            android:layout_marginBottom="498dp"
            android:background="@drawable/cornered_button"
            android:fontFamily="@font/bukhari"
            android:maxWidth="10dp"
            android:maxHeight="10dp"
            android:text="@string/login_signup"
            android:textColor="@color/redBold"
            android:textSize="15sp">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>