<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Authentication.LoginPage">

    <ImageView
        android:id="@+id/top_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="500dp"
        android:maxHeight="500dp"
        android:scaleType="fitCenter"
        android:src="@drawable/login_back"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="66dp"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/continue_no_account"
                android:layout_width="match_parent"
                android:backgroundTintMode="src_atop"
                android:textColor="@android:color/black"
                android:background="@color/redBold"
                android:layout_height="wrap_content"
                android:text="@string/login_continue_no_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login-title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/bukhari"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hello_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bukhari"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/margin_default"
            android:text="@string/login_hello"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/there_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bukhari"
            android:gravity="start|center_vertical"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/margin_default"
            android:text="@string/login_there"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="229dp"
                android:adjustViewBounds="true"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="56dp"
                android:paddingRight="24dp"
                android:scaleType="fitCenter">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/signup_email"
                    android:inputType="textEmailAddress"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:hint="@string/login_pass"
                    android:inputType="textPassword"
                    android:scaleType="fitCenter"
                    android:textColor="@android:color/black"
                    android:textColorLink="@android:color/black" />

                <!-- Forgot Password -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgot_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:autoLink="web"
                        android:fontFamily="@font/bukhari"
                        android:gravity="center"
                        android:text="@string/login_forgot"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="15sp"></TextView>
                </LinearLayout>

                <!-- Sign up -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/bukhari"
                        android:gravity="center"
                        android:text="@string/login_signup"
                        android:textColor="@color/redBold"
                        android:textSize="15sp"></TextView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/login"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_default"
            android:layout_marginBottom="498dp"
            android:background="@drawable/cornered_button"
            android:fontFamily="@font/bukhari"
            android:maxWidth="10dp"
            android:maxHeight="10dp"
            android:text="@string/login_login"
            android:textColor="@android:color/white"
            android:textSize="15sp">

        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>